# playground

./: .clang-format  CMakeLists.txt  README.md
bulls-and-cows/: BullsAndCows.cpp  BullsAndCows.h  CMakeLists.txt  TestBullsAndCows.cpp
cmake-template/: App.cpp  App.h  CMakeLists.txt  TestApp.cpp  main.cpp
codewars/: CMakeLists.txt  battleship.cpp  beeramid.cpp  boggle-word-checker.cpp  burrows-wheeler-trasformation.cpp  camel-case.cpp  code-war.cpp  coloured-triangles.cpp  connect-four.cpp  consecutive-strings.cpp  count-smiley.cpp  counting-duplicates.cpp  determinant.cpp  digital-root.cpp  directions-reduction.cpp  divide-strings.cpp  duplicate-encoder.cpp  find-outliner.cpp  ice-maze-solver.cpp  infix-to-postfix.cpp  largest-visible-area.cpp  last-digit-extended.cpp  last-digit.cpp  list-loop.cpp  naive-subarray.cpp  path-finder-shortest.cpp  path-finder.cpp  permutations.cpp  quadratic-builder.cpp  range-extraction.cpp  rectangle-rotation.cpp  remove-product.cpp  rgb-to-hex.cpp  roman-numerals.cpp  rot13.cpp  skyscrapers.cpp  snail-sort.cpp  square-sum.cpp  square-sums.cpp  sum-of-intervals.cpp  (+7 more)
gamblers-fallacy/: CMakeLists.txt  GamblersFallacy.cpp  GamblersFallacy.h  TestGamblersFallacy.cpp
hackerrank/: 3d-surface-area.cpp  CMakeLists.txt  acm-icpc-team.cpp  almost-sorted.cpp  angry-professor.cpp  append-and-delete.cpp  apple-and-orange.cpp  beautiful-days.cpp  beautiful-triplets.cpp  between-two-sets.cpp  bigger-is-greater.cpp  bill-division.cpp  breaking-the-records.cpp  cats-and-mouse.cpp  circular-array-rotation.cpp  climbing-the-leaderboard.cpp  counting-valleys.cpp  cut-the-sticks.cpp  designer-pdf-viewer.cpp  divisible-sum-pairs.cpp  drawing-book.cpp  electronics-shop.cpp  encryption.cpp  equalize-the-array.cpp  find-digits.cpp  flatland-space-stations.cpp  grading-students.cpp  grid-search.cpp  hurdle-race.cpp  jumping-on-the-clouds.cpp  lady-bug.cpp  library-fine.cpp  lisas-workbook.cpp  magic-square.cpp  migratory-birds.cpp  minimum-distances.cpp  non-divisible-subset.cpp  number-line-jumps.cpp  organizing-containers.cpp  picking-numbers.cpp  (+10 more)
hash-check/: CMakeLists.txt  HashCheck.cpp  HashCheck.h  TestHashCheck.cpp
josephus-problem/: CMakeLists.txt  JosephusProblem.cpp  JosephusProblem.h  TestJosephusProblem.cpp
kernel-tasks/: CMakeLists.txt  string_buffer.c  string_buffer.h  string_reverse.c  string_reverse.h  test_string_buffer.cpp  test_string_reverse.cpp
parallel-min-max/: CMakeLists.txt  ParallelMinMax.cpp  ParallelMinMax.h  TestParallelMinMax.cpp
partition/: CMakeLists.txt  Partition.cpp  Partition.h  TestPartition.cpp
phone-number/: CMakeLists.txt  PhoneNumber.cpp  PhoneNumber.h  TestPhoneNumber.cpp
race-simulation/: CMakeLists.txt  RaceSimulation.cpp  RaceSimulation.h  main.cpp
race-simulation/common/: CMakeLists.txt
race-simulation/common/include/: Rng.h  common.h
race-simulation/common/src/: Rng.cpp
race-simulation/common/test/: CMakeLists.txt  TestRng.cpp
race-simulation/mocks/: MockRng.h  MockTrack.h
race-simulation/race/: CMakeLists.txt
race-simulation/race/include/: Competitor.h  Race.h  Rules.h
race-simulation/race/src/: Competitor.cpp  Race.cpp  Rules.cpp
race-simulation/race/test/: CMakeLists.txt  TestCompetitor.cpp  TestRace.cpp  TestRules.cpp
race-simulation/track/: CMakeLists.txt
race-simulation/track/include/: ConsoleTrack.h  Track.h
race-simulation/track/src/: ConsoleTrack.cpp
rectangle-rotation/: CMakeLists.txt  RectangleRotation.cpp  RectangleRotation.h  main.cpp
reverse-sentence/: CMakeLists.txt  ReverseSentence.cpp  ReverseSentence.h  TestReverseSentence.cpp
set-operations/: CMakeLists.txt  SetOperations.cpp  SetOperations.h  TestSetOperations.cpp
sharpers-hand/: CMakeLists.txt  SharpersHand.cpp  SharpersHand.h  TestSharpersHand.cpp
square-sums/: CMakeLists.txt  SquareSums.cpp  SquareSums.h  TestSquareSums.cpp
string-list/: CMakeLists.txt  MemoryStringList.cpp  MemoryStringList.h  StringList.h
template-specialization/: CMakeLists.txt  TemplateSpecialization.cpp
topological-sort/: CMakeLists.txt  main.cpp
tower-of-hanoi/: CMakeLists.txt  TestTowerOfHanoi.cpp  TowerOfHanoi.cpp  TowerOfHanoi.h
word-pack/: CMakeLists.txt  TestWordPack.cpp  WordPack.cpp  WordPack.h
xor-riddler/: CMakeLists.txt  TestXorRiddler.cpp  XorRiddler.cpp  XorRiddler.h  riddler.cpp  solver.cpp
